--- a/app/src/main/res/layout/restaurant_overview.xml
+++ b/app/src/main/res/layout/restaurant_overview.xml
@@ -42,7 +42,9 @@
                 android:elevation="2dp"
                 app:layout_constraintBottom_toTopOf="@id/card2"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                android:clickable="true"
+                android:focusable="true">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -159,7 +161,9 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/card"
-                tools:layout_constraintTop_toBottomOf="@id/card">
+                tools:layout_constraintTop_toBottomOf="@id/card"
+                android:clickable="true"
+                android:focusable="true">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -272,7 +276,9 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/card2"
-                tools:layout_constraintTop_toBottomOf="@id/card2">
+                tools:layout_constraintTop_toBottomOf="@id/card2"
+                android:clickable="true"
+                android:focusable="true">
 
                 <LinearLayout
                     android:layout_width="match_parent"
