--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -2,28 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/page_1"
+        android:id="@+id/restaurantOverviewFragment"
         android:enabled="true"
         android:icon="@drawable/ic_local_dining_white_24dp"
         android:title="Restaurants"
         app:showAsAction="always"/>
 
     <item
-        android:id="@+id/page_2"
+        android:id="@+id/mapsFragment"
         android:enabled="true"
         android:icon="@drawable/ic_location_on_white_24dp"
         android:title="Karte"
         app:showAsAction="always"/>
 
     <item
-        android:id="@+id/page_3"
+        android:id="@+id/cartFragment"
         android:enabled="true"
         android:icon="@drawable/ic_shopping_cart_white_24dp"
         android:title="Warenkorb"
         app:showAsAction="always"/>
 
     <item
-        android:id="@+id/page_4"
+        android:id="@+id/userProfileFragment"
         android:enabled="true"
         android:icon="@drawable/ic_person_white_24dp"
         android:title="@string/user"
