--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:openDrawer="start"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:tools="http://schemas.android.com/tools">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
@@ -227,15 +224,15 @@
 
         </androidx.core.widget.NestedScrollView>
 
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:menu="@menu/bottom_navigation"
+            android:layout_gravity="bottom"
+            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
+            />
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-
-    <com.google.android.material.navigation.NavigationView
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:layout_gravity="start"
-        android:id="@+id/navdrawer"
-        app:menu="@menu/sidesheet_replacement_navdrawer"
-        app:headerLayout="@layout/header_navdrawer" />
-
-</androidx.drawerlayout.widget.DrawerLayout>
