--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -16,6 +16,15 @@
         app:showAsAction="always"/>
 
     <item
+        android:id="@+id/page_23"
+        android:enabled="true"
+        android:icon="@drawable/ic_notifications_white_24dp"
+        android:title="Karte"
+        app:showAsAction="always"/>
+
+
+
+    <item
         android:id="@+id/cartFragment"
         android:enabled="true"
         android:icon="@drawable/ic_shopping_cart_white_24dp"
