--- a/app/src/main/res/layout/restaurant_profile.xml
+++ b/app/src/main/res/layout/restaurant_profile.xml
@@ -30,7 +30,7 @@
             android:orientation="vertical">
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/card0"
+            android:id="@+id/r_profile_card1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -39,8 +39,7 @@
             android:elevation="2dp"
             android:focusable="true"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            >
+            app:layout_constraintStart_toStartOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -81,7 +80,7 @@
             android:rowCount="5">
 
             <com.google.android.material.card.MaterialCardView
-                android:id="@+id/card"
+                android:id="@+id/r_profile_card2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
@@ -133,7 +132,7 @@
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
-            android:id="@+id/card2"
+            android:id="@+id/r_profile_card3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -185,7 +184,7 @@
         </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
-                android:id="@+id/card3"
+                android:id="@+id/r_profile_card4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
@@ -237,7 +236,7 @@
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
-                android:id="@+id/card4"
+                android:id="@+id/r_profile_card5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
