--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -16,7 +16,7 @@
         app:showAsAction="always"/>
 
     <item
-        android:id="@+id/page_23"
+        android:id="@+id/notificationsFragment"
         android:enabled="true"
         android:icon="@drawable/ic_notifications_white_24dp"
         android:title="Karte"
@@ -30,7 +30,7 @@
         app:showAsAction="always"/>
 
     <item
-        android:id="@+id/userProfileFragment"
+        android:id="@+id/userProfileGraph"
         android:enabled="true"
         android:icon="@drawable/ic_person_white_24dp"
         android:title="@string/user"
