--- a/app/src/main/res/menu/restaurant_profile_top_app_bar.xml
+++ b/app/src/main/res/menu/restaurant_profile_top_app_bar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/settings"
+        android:id="@+id/settingsButton"
         android:icon="@drawable/ic_settings_white_24dp"
         android:title="@string/settings"
         app:showAsAction="always" />
